--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,7 +9,7 @@ analyzer:
 
 linter:
   rules:
-    # - avoid_print
+    - avoid_print
     - avoid_unnecessary_containers
     - avoid_web_libraries_in_flutter
     - no_logic_in_create_state
