--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: britannio/action-install-flutter@v1.0
       - uses: actions/checkout@v2
 
       # Note: This workflow uses the latest stable version of the Dart SDK.
