--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 # Files and directories created by pub
 .dart_tool/
 .packages
+.flutter-plugins
+.flutter-plugins-dependencies
+
 build/
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
@@ -19,4 +22,4 @@ doc/api/
 *.js_
 *.js.deps
 *.js.map
-*.flutter
+
