--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   flutter_bloc: ^7.0.0
   equatable: ^2.0.3
   rxdart: ^0.27.1
+  hydrated_bloc: ^7.0.1
+  bloc_test: ^8.0.2
+  replay_bloc: ^0.0.2
   image_picker: ^0.8.1+1
   sized_context: ^1.0.0+1
 
