--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,13 +21,17 @@ dependencies:
   replay_bloc: ^0.0.2
   image_picker: ^0.8.1+3
   sized_context: ^1.0.0+1
+  authentication_repository:
+    path: packages/authentication_repository
+  user_repository:
+    path: packages/user_repository
 
 dev_dependencies:
-  flutter_lints: ^1.0.3
   mockito: ^5.0.10
   integration_test:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.3
 
 flutter:
   uses-material-design: true
